<resources>
    <string name="welcome">Welcome to FitUp!</string>
    <string name="register">Create an account!</string>
    <string name="app_name">FitUp</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_categories">Categories</string>
    <string name="navigation_lists">Training Lists</string>
    <string name="navigation_profile_settings">Settings</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="nameText">Name</string>
    <string name="age">Age</string>
    <string name="loginButtonText">Login</string>
    <string name="newUserText">¿Are you new?</string>
    <string name="registerButtonText">Register</string>
    <string name="confirmButtonText">Confirm</string>
    <string name="suggested_exercises">Suggested exercises:</string>
    <string name="fitup_logo">FitUp logo</string>
    <string name="musclesList">Muscles:</string>
    <string name="add_training_list">New training list</string>
    <string name="listName">List name</string>
    <string name="createList">Create</string>
    <string name="add_exercise_to_training_list">Add exercise to Training List</string>
    <string name="empty_training_lists">You don\'t have any Training List yet...</string>
    <string name="confirm_alert">OK</string>
    <string name="category_image">Category Image</string>
    <string name="settings_title">Settings</string>
    <string name="dark_mode">Dark theme</string>
    <string name="lock_delete">Lock delete training lists</string>
    <string name="user_settings">User settings:</string>
    <string name="app_settings">Application settings:</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="email_data">Email: </string>
    <string name="name_data">Name: </string>
    <string name="age_data">Age: </string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="no_results_exercises">No exercises were found! Please, try again later</string>
    <string name="no_results_training_lists">No training lists were found! Start adding a new one!</string>
    <string name="muscles_list">Muscles list:</string>
    <string name="exercises_category_list">Category list:</string>
    <string name="my_training_lists">My Training Lists:</string>
</resources>