<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:background="@drawable/background_custom"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/firstDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/settingsTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/settings_title"
                style="@style/MyTextView.Title" />
            <TextView
                android:id="@+id/notificationSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/notification_settings"
                style="@style/MyTextView.Title.Small" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_marginTop="20dp"
                >
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchTrainingList"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="40dp"
                    android:checked="false"
                    android:layout_weight="0.1"
                    />
                <TextView
                    android:id="@+id/trainingListDate"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_weight="1.9"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_width="0dp"
                    android:text="@string/daily_exercise_reminder"
                    style="@style/MyTextView.Text.Medium"/>
            </LinearLayout>
            <TextView
                android:id="@+id/userSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/user_settings"
                style="@style/MyTextView.Title.Small" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/email_data"
                style="@style/MyTextView.Text.Medium" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/name_data"
                style="@style/MyTextView.Text.Medium" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/age_data"
                style="@style/MyTextView.Text.Medium" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="25dp"
                android:hint="@string/passwordText"
                android:inputType="textPassword"
                style="@style/MyEditText.Drawable.Password"/>

            <EditText
                android:id="@+id/editConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                style="@style/MyEditText.Drawable.Password"/>


            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="32dp"
                android:text="@string/change_password"
                style="@style/MyButton.Primary"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>